[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/rabbit.png" type="Texture" id=1]
[ext_resource path="res://rabbit/RabbitScript.gd" type="Script" id=2]
[ext_resource path="res://images/rabbit-back.png" type="Texture" id=3]
[ext_resource path="res://gui/gui.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Front",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle_Front",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.5, 10 )

[sub_resource type="CircleShape2D" id=3]

[node name="Rabbit" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle_Front"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 6 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.15
drag_margin_top = 0.15
drag_margin_right = 0.15
drag_margin_bottom = 0.15

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="GUI" parent="Camera2D/CanvasLayer" instance=ExtResource( 4 )]

[node name="CollectionArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea2D"]
position = Vector2( -0.5, 6 )
scale = Vector2( 2, 2 )
shape = SubResource( 3 )

[connection signal="carrot_count_changed" from="." to="Camera2D/CanvasLayer/GUI" method="_on_Rabbit_carrot_count_changed"]
[connection signal="flesh_count_changed" from="." to="Camera2D/CanvasLayer/GUI" method="_on_Rabbit_flesh_count_changed"]
[connection signal="area_entered" from="CollectionArea2D" to="." method="_on_CollectionArea2D_area_entered"]
